Add jvm opts.